<resources>
    <string name="app_name">claficados</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Buscar</string>
    <string name="menu_slideshow">Notificaciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_thing">Objetos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Thing fragment</string>
    <string name="thing_new_fragment">Thing new fragment</string>
    <string name="products">Productos</string>
    <string name="search">Buscar</string>
    <string name="services">Servicios</string>
    <string name="bienvido_a_la_tieda">Bienvido a la tieda</string>
    <string name="direcciones">Direcciones</string>
</resources>