<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/thing"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_thing" />
        <item
            android:id="@+id/thingNewFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/thing_new_fragment" />
        <item
            android:id="@+id/adress"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/direcciones" />
    </group>
</menu>