<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.claficados.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
        <action
            android:id="@+id/action_nav_home_to_nav_slideshow"
            app:destination="@id/nav_slideshow" />
        <action
            android:id="@+id/action_nav_home_to_thing"
            app:destination="@id/thing" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.claficados.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.claficados.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/thing"
        android:name="com.example.claficados.ui.thing.thing"
        android:label="fragment_thing"
        tools:layout="@layout/fragment_thing" >
        <action
            android:id="@+id/action_thing_to_thingNewFragment"
            app:destination="@id/thingNewFragment" />
    </fragment>
    <fragment
        android:id="@+id/thingNewFragment"
        android:name="com.example.claficados.ui.newthing.ThingNewFragment"
        android:label="fragment_thing_new"
        tools:layout="@layout/fragment_home_thing" >
        <action
            android:id="@+id/action_thingNewFragment_to_adress"
            app:destination="@id/adress" />
    </fragment>
    <fragment
        android:id="@+id/adress"
        android:name="com.example.claficados.ui.adress.adressMain"
        android:label="fragment_adress"
        tools:layout="@layout/fragment_adress" >
        <action
            android:id="@+id/action_adress_to_addAdress"
            app:destination="@id/addAdress" />
        <action
            android:id="@+id/action_adress_to_payment"
            app:destination="@id/payment" />
    </fragment>
    <fragment
        android:id="@+id/addAdress"
        android:name="com.example.claficados.ui.adress.AddAdress"
        android:label="fragment_add_adress"
        tools:layout="@layout/fragment_add_adress" />
    <fragment
        android:id="@+id/payment"
        android:name="com.example.claficados.ui.payment.Payment"
        android:label="fragment_payment"
        tools:layout="@layout/fragment_payment" />
</navigation>